// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorites page shows empty favorite lists 1`] = `
<section
  className="section"
>
  <div
    className="columns is-variable is-5"
  >
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite films
        </p>
        <div
          className="columns is-multiline"
        >
          <div
            className="column"
          >
            <p
              className="empty-msg"
            >
              There are no favorite films
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite characters
        </p>
        <div
          className="columns is-multiline"
        />
        <div
          className="column"
        >
          <p
            className="empty-msg"
          >
            There are no favorite characters
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Favorites page shows empty film favorite list and character list 1`] = `
<section
  className="section"
>
  <div
    className="columns is-variable is-5"
  >
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite films
        </p>
        <div
          className="columns is-multiline"
        >
          <div
            className="column"
          >
            <p
              className="empty-msg"
            >
              There are no favorite films
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite characters
        </p>
        <div
          className="columns is-multiline"
        >
          <div
            className="character column is-half"
          >
            <div
              className="sc-bwzfXH kZUMPF card character-item"
              onClick={[Function]}
            >
              <div
                className="card-content"
              >
                <div
                  className="media"
                >
                  <div
                    className="media-left"
                  >
                    <figure
                      className="image is-24x24"
                    >
                      <img
                        alt="Character"
                        src="character-icon.png"
                      />
                    </figure>
                  </div>
                  <div
                    className="media-content"
                  >
                    <p
                      className="title is-6"
                    >
                      Luke Skywalker
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Favorites page shows film favorite list and character list 1`] = `
<section
  className="section"
>
  <div
    className="columns is-variable is-5"
  >
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite films
        </p>
        <div
          className="columns is-multiline"
        >
          <div
            className="film column is-one-quarter"
          >
            <div
              className="sc-bdVaJa fVCJpx card"
              onClick={[Function]}
            >
              <div
                className="card-image"
              >
                <figure
                  className="image is-4by3"
                >
                  <img
                    alt="Thumbnail"
                    src="sw_5.jpg"
                  />
                </figure>
              </div>
              <div
                className="card-content"
              >
                <div
                  className="media"
                >
                  <div
                    className="media-content"
                  >
                    <p
                      className="subtitle is-6"
                    >
                      Episode#4
                    </p>
                    <p
                      className="title is-4"
                    >
                      A New Hope
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="film column is-one-quarter"
          >
            <div
              className="sc-bdVaJa fVCJpx card"
              onClick={[Function]}
            >
              <div
                className="card-image"
              >
                <figure
                  className="image is-4by3"
                >
                  <img
                    alt="Thumbnail"
                    src="sw_6.jpg"
                  />
                </figure>
              </div>
              <div
                className="card-content"
              >
                <div
                  className="media"
                >
                  <div
                    className="media-content"
                  >
                    <p
                      className="subtitle is-6"
                    >
                      Episode#5
                    </p>
                    <p
                      className="title is-4"
                    >
                      The Empire Strikes Back
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite characters
        </p>
        <div
          className="columns is-multiline"
        >
          <div
            className="character column is-half"
          >
            <div
              className="sc-bwzfXH kZUMPF card character-item"
              onClick={[Function]}
            >
              <div
                className="card-content"
              >
                <div
                  className="media"
                >
                  <div
                    className="media-left"
                  >
                    <figure
                      className="image is-24x24"
                    >
                      <img
                        alt="Character"
                        src="character-icon.png"
                      />
                    </figure>
                  </div>
                  <div
                    className="media-content"
                  >
                    <p
                      className="title is-6"
                    >
                      Luke Skywalker
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Favorites page shows film favorite list and empty character list 1`] = `
<section
  className="section"
>
  <div
    className="columns is-variable is-5"
  >
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite films
        </p>
        <div
          className="columns is-multiline"
        >
          <div
            className="film column is-one-quarter"
          >
            <div
              className="sc-bdVaJa fVCJpx card"
              onClick={[Function]}
            >
              <div
                className="card-image"
              >
                <figure
                  className="image is-4by3"
                >
                  <img
                    alt="Thumbnail"
                    src="sw_5.jpg"
                  />
                </figure>
              </div>
              <div
                className="card-content"
              >
                <div
                  className="media"
                >
                  <div
                    className="media-content"
                  >
                    <p
                      className="subtitle is-6"
                    >
                      Episode#4
                    </p>
                    <p
                      className="title is-4"
                    >
                      A New Hope
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="film column is-one-quarter"
          >
            <div
              className="sc-bdVaJa fVCJpx card"
              onClick={[Function]}
            >
              <div
                className="card-image"
              >
                <figure
                  className="image is-4by3"
                >
                  <img
                    alt="Thumbnail"
                    src="sw_6.jpg"
                  />
                </figure>
              </div>
              <div
                className="card-content"
              >
                <div
                  className="media"
                >
                  <div
                    className="media-content"
                  >
                    <p
                      className="subtitle is-6"
                    >
                      Episode#5
                    </p>
                    <p
                      className="title is-4"
                    >
                      The Empire Strikes Back
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="column"
    >
      <div
        className="container"
      >
        <p
          className="title is-3"
        >
          Favorite characters
        </p>
        <div
          className="columns is-multiline"
        />
        <div
          className="column"
        >
          <p
            className="empty-msg"
          >
            There are no favorite characters
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;
